
add_subdirectory(sound-manager)
add_subdirectory(physics)
add_subdirectory(device)
add_subdirectory(solver)
add_subdirectory(rkf5)
add_subdirectory(rk4)
add_subdirectory(vehicle)
add_subdirectory(coupling)
add_subdirectory(brakepipe)
add_subdirectory(profile)
add_subdirectory(train)
add_subdirectory(sim-client)
add_subdirectory(model)
add_subdirectory(default-coupling)
add_subdirectory(ef-coupling)
add_subdirectory(simulator)

add_subdirectory(modbus)

add_subdirectory(krm395)
add_subdirectory(krm130)
add_subdirectory(vr242)
add_subdirectory(kvt224)
add_subdirectory(kvt254)
add_subdirectory(epk150)
add_subdirectory(evr305)
add_subdirectory(carbrakes-mech)
