cmake_minimum_required (VERSION 3.7)

project (simulator)

add_subdirectory (physics)
add_subdirectory (device)
add_subdirectory (solver)
add_subdirectory (rkf5)
add_subdirectory (rk4)
add_subdirectory (euler2)
add_subdirectory (euler)
add_subdirectory (vehicle)
add_subdirectory (profile)
add_subdirectory (train)
add_subdirectory (sim-client)
add_subdirectory (signaling)
add_subdirectory (model)
add_subdirectory (simulator)

add_subdirectory (modbus)
add_subdirectory (freejoy)
