project (simulator)

add_subdirectory (physics)
add_subdirectory (device)
add_subdirectory (solver)
add_subdirectory (rkf5)
add_subdirectory (rk4)
add_subdirectory (euler2)
add_subdirectory (euler)
add_subdirectory (vehicle)
add_subdirectory (profile)
add_subdirectory (train)
add_subdirectory (sim-client)
add_subdirectory (topology)
add_subdirectory (signaling)
add_subdirectory (model)
add_subdirectory (simulator)

add_subdirectory (modbus)
add_subdirectory (freejoy)

add_subdirectory (krm395)
add_subdirectory (krm130)
add_subdirectory (vr242)
add_subdirectory (vr292)
add_subdirectory (vr483)
add_subdirectory (ar265)
add_subdirectory (kvt224)
add_subdirectory (kvt254)
add_subdirectory (epk150)
add_subdirectory (evr305)
add_subdirectory (sa3)
add_subdirectory (hose369a)
add_subdirectory (joint-coupling)
add_subdirectory (joint-coupling-sa3)
add_subdirectory (joint-pneumo-hose)
add_subdirectory (joint-pneumo-hose-epb)

install(FILES ../common-headers/sound-signal.h DESTINATION sdk/include)
