cmake_minimum_required (VERSION 3.7)

project (viewer)

add_subdirectory (osgdb_dmd)
add_subdirectory (library)
add_subdirectory (sound-manager)
add_subdirectory (route-loader)
add_subdirectory (zds-route-loader)
add_subdirectory (display)
add_subdirectory (display-player)
add_subdirectory (viewer)
